[package]
name = "hydra"
version = "0.1.0"
authors = ["David Schatz <david.schatz@tu-ilmenau.de>"]
edition = "2018"

[dependencies]
openssl-sys = "^0.9"
openssl = "^0.10"
hex = "^0.4"
byteorder = "^1"
tonic = "^0.2"
prost = "^0.6"
tokio = { version = "^0.2", features = ["macros", "rt-threaded"] }
async-stream = "^0.2"
futures-core = "^0.3"
futures-util = "^0.3"
log = "^0.4"
simplelog = "^0.7"

[build-dependencies]
cmake = "^0.1"
tonic-build = "^0.2"
