[package]
name = "hydra"
version = "0.1.0"
authors = ["David Schatz <david.schatz@tu-ilmenau.de>"]
edition = "2018"

[dependencies]
openssl-sys = "^0.9"
openssl = "^0.10"
hex = "^0.4"
byteorder = "^1"
http = "^0.2"
tonic = {version = "^0.3", features = ["transport", "tls"] }
prost = "^0.6"
tokio = { version = "^0.2", features = ["macros", "rt-threaded"] }
async-stream = "^0.2"
futures-core = "^0.3"
futures-util = "^0.3"
log = "^0.4"
simplelog = "^0.8"
clap = "^2"
ctrlc = "^3"
rand = "^0.7"
rand_core = "^0.5"
sha2 = "^0.9"
hmac = "^0.8"
hkdf = "^0.9"
spmc = "^0.3"
rayon = "^1"
crossbeam-channel = "^0.4"
bloomfilter = "1.0.3"
fcm = "^0.7"

[build-dependencies]
cmake = "^0.1"
tonic-build = "^0.3"
